[tool.poetry]
name = "rl"
version = "0.1.0"
description = "Pytorch for reinforcement learning"
authors = ["ssafarveisi <sajad.safarveisi@ionos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
